# emoji_server_fast

./: Cargo.toml  README.md  words.txt
src/: main.rs
